# tictactoe

./: LICENSE  tictactoe.cabal
src/: Game.hs  Main.hs  Renderer.hs
